# transformer-encoder-frankestein

./: .gitignore  README.md  environment.yml  pyproject.toml  requirements.txt  run_tests.sh  skills-lock.json
.github/workflows/: tests.yml
configs/: modernbert_sbert_continual.yaml  schema.yaml
configs/examples/: decoder_gated_mixed_adamw.yaml  es_arch_all_gated_muon.yaml  es_arch_bigbird_sparsek_lamb.yaml  es_arch_gla_deltanet_lion.yaml  es_arch_hgrn2_fox_gated_softmax_adamw.yaml  es_arch_nsa_retnet_radam.yaml  es_arch_sparse_longformer_adamw.yaml  es_mlm_bertin_apollo.yaml  es_mlm_mbert_apollo_mini.yaml  es_mlm_modernbert_q_apollo.yaml  examples.md
docs/: OPTIMIZERS.md  README.md  ROADMAP.md  paper-es.tex  paper.tex
docs/bibliography/: SPARSE_TRANSFORMER_TYPES.md  TRANSFORMER_TYPES.md  attention_types.bib  optimizers.bib  other.bib
docs/v1/: README.md  diagram.mermaid
docs/v2/: README.md  diagram.mermaid  paper.tex
src/: cli.py  main.py  pyproject.toml
src/deploy/: README.md  __init__.py  deploy.py  deploy_pipeline.bat  deploy_pipeline.sh  example.py  inference.py
src/deploy/v2/: README.md  deploy.py  example.py  inference.py  quantization.py
src/model/: __init__.py  tormented_bert_frankestein.py
src/model/attention/: __init__.py  common.py  engram.py  hope.py  ode.py  retnet.py  rope.py  sigmoid.py  standard.py  titan.py
src/model/attention/gated/: __init__.py  deltanet_attn.py  fox_attn.py  gated_deltanet_attn.py  gated_softmax_attn.py  gla_attn.py  hgrn2_attn.py  retnet_attn.py
src/model/optimizer/: __init__.py  adafactor.py  adamw.py  adan.py  ademamix.py  adopt.py  apollo.py  apollo_mini.py  base.py  cautious_adamw.py  factory.py  galore_adamw.py  lamb.py  lion.py  mars_adamw.py  muon.py  prodigy.py  q_apollo.py  radam.py  schedulefree_adamw.py  sgd_momentum.py  shampoo.py  soap.py  sophia.py  turbo_muon.py
src/model/v1/: configuration.py  model.py
src/model/v2/: titan_bert_ultra.py  tormented_bert_frankestein.py
src/sbert/: README.md  __init__.py  example_usage.py  inference_sbert.py  train_sbert.py
src/sbert/v2/: example_usage.py  inference_sbert.py  train_sbert.py
src/streamlit_gui/: app.py
src/tokenizer/: spm_spa_redpajama35.py
src/training/: config_loader.py  main.py  streaming_mlm_dataset.py  trainer.py
src/training/configs/: README.md  embbert.yaml  frankenstein.yaml  mini.yaml  modernbert_continual.yaml  modernbert_sbert.yaml  schema.yaml  standard.yaml  standard_hope.yaml  tinybert.yaml
src/training/v1/: main.py  streaming_mlm_dataset.py  test_recovery.py  trainer.py
src/training/v2/: __init__.py  main.py  trainer.py
src/utils/: __init__.py  device.py  gpu_temp_guard.py  storage_manager.py
tests/: test_attention_refactor.py  test_cli_gpu_temp_flags.py  test_config_loader.py  test_gpu_temp_guard.py  test_mlm_masking.py  test_model_training_fake_data.py  test_optimizer_factory.py  test_schema_attention_layers.py  test_trainer_thermal_offload.py  test_yaml_examples.py
(+33 files in other folders)
