[project]
name = "spanish_moe_bert"
version = "0.1.0"
description = "Spanish MoE-BERT model with SPM tokenizer"
readme = "README.md"
requires-python = ">=3.9, <4.0"
dependencies = [
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "sacremoses>=0.0.53",
    "datasets>=2.14.0",
    "transformers>=4.35.0",
    "accelerate>=0.24.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
train = [
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
# uv-specific configurations (optional)