[project]
name = "transformer_encoder_frankestein"
version = "0.1.0"
description = "Config-driven training library and CLI for end-to-end NLP workflows"
readme = "README.md"
requires-python = ">=3.9, <3.13"  # Changed: Avoid Python 3.13 for now

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
default = true   # optional: set this index as the default for all packages

dependencies = [
    "torch==2.6.0+cu118",  # Changed to 2.6 because security issues
    "sentence-transformers>=3.0.0",
    "sentencepiece>=0.1.99",
    "sacremoses>=0.0.53",
    "datasets>=2.14.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "tqdm>=4.66.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "psutil>=5.9.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
frankestein-transformer = "src.cli:main"

[project.optional-dependencies]
train = [
    "wandb>=0.15.0",
    "tensorboard>=2.14.0",
]
cuda = [
    "torch==2.6.0+cu118",  # CUDA 11.8 variant
]
cpu = [
    "torch==2.6.0+cpu",  # CPU-only variant
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]


